--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
    <body>
       <div id="root"></div>
       <script src="src/script.js" type="module"></script>
+      <!-- <script src="src/test/encapsulation.js" type="module"></script> -->
    </body>
 </html>
